fix: landscape mode search bar overlaps current info

--- a/my-app/src/app/pages/introduction-page/introduction-page.component.css
+++ b/my-app/src/app/pages/introduction-page/introduction-page.component.css
@@ -348,7 +348,7 @@ app-search-bar {
         width: 40%;
         height: 72%;
         flex-direction: column;
-        margin-top: 50px;
+        margin-top: 55px;
     }
 
     .search {
